2009-02-10 Denton Woods <doomwiz@users.sf.net>
	* il_io.c: Added ilLoadBlp calls in il_io.c.
	* VC9 projects: Turned off x64 incremental linking to prevent debugging problems described here:
	  http://stackoverflow.com/questions/218747/msvcr90ddll-not-found-in-debug-mode-with-visual-c-2008
	* il_blp.c: Added code to read BLP2 files.

2009-02-09 Denton Woods <doomwiz@users.sf.net>
	* ilu_scale2d.c (iluScale2DBilinear_): Started rewrite, since results were really ugly.
	* il_iwi.c / il_vtf.c: Changed max references to IL_MAX.
	* il_wdp.c: Redid all of the code so that it actually works now.
	* il_internal.h:42-46: Added lines to define IL_NO_WDP if not in Windows.
	* il_io.c: Added Iwi and Fits loading calls.
	* il.h: Added IL_BLP and IL_DICOM.  Switched IL_DICOM and IL_IWI defines.
	* il_internal.h: Added Blp and Dicom function defines.
	* il_blp.c: Added this file and started code.
	* lib/Makefile.am and src-IL/src/Makefile.am: Added il_blp.c to source line.

2009-02-09 Matěj Týč <bubla@users.sf.net>
	* tests/testil.c: Added checks what IL loading/saving routines ended
	* build system: Removed --enable-monolithic option.

2009-02-07/08 Denton Woods <doomwiz@users.sf.net>
	* il_iwi.c: Added this file and code to load .iwi files.
	* il_vtf.c (iLoadVtfInternal): Added checks for CompData == NULL.
	* il_dds.c/il_dds.h: Changed CompFormat to a local variable.  Renamed Decompress to DdsDecompress.
	* ChangeLog (this file): Changed order to newest at the top.
	* il.h: Added IL_FITS and IL_IWI defines.
	* config.h.win: Added IL_FITS, IL_IWI, IL_SUN and IL_TPL.
	* lib/Makefile.am and src-IL/src/Makefile.am: Added il_fits.c and il_iwi.c to source line.


--- 1.7.7 release ---

2009-02-06 Matěj Týč <bubla@users.sf.net>
	* configure.ac, lib/Makefile.am: Added explicit linking with libm
	library + fixed the ilut_x11.c file conditions of compilation
	* examples/Makefile.am + IL examples, test/Makefile.am + testil: Added